--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ClawSolved – Enterprise AI That Endures</title>
-  <meta name="description" content="OpenClaw™ resilience architecture. Production AI systems engineered to withstand disruption, evolution, and uncertainty. For leaders who demand stability."/>
+  <title>ClawSolved – AI Systems That Don't Break</title>
+  <meta name="description" content="OpenClaw™ builds resilient AI infrastructure that survives model changes, API failures, and provider outages. Professional async delivery for teams that ship."/>
 
   <!-- Google Fonts: Outfit (geometric display) + Work Sans (refined body) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -468,9 +468,9 @@
       </div>
       <nav>
         <button class="nav-btn active" data-view="overview">Overview</button>
-        <button class="nav-btn" data-view="features">Features</button>
-        <button class="nav-btn" data-view="resilience">Resilience</button>
-        <button class="nav-btn" data-view="access">Early Access</button>
+        <button class="nav-btn" data-view="features">How It Works</button>
+        <button class="nav-btn" data-view="resilience">Why OpenClaw</button>
+        <button class="nav-btn" data-view="access">Get Started</button>
       </nav>
     </header>
 
@@ -489,28 +489,28 @@
         <!-- Overview View -->
         <div class="content-view active" data-content="overview">
           <span class="eyebrow">Powered by OpenClaw™</span>
-          <h2>AI infrastructure that doesn't break when everything else does</h2>
-          <p>Your competitors are fighting fires. Model deprecations. API changes. Integration failures. <strong style="color: var(--cream);">You're building on quicksand.</strong></p>
-          <p>ClawSolved delivers resilience-first architecture engineered for non-technical leaders who demand stability in volatile AI landscapes.</p>
-          <p style="margin-top: 24px; color: var(--gold); font-weight: 600;">OpenClaw™ resilience architecture ensures your systems survive disruption, evolution, and uncertainty.</p>
+          <h2>Your AI systems shouldn't break every time a vendor updates</h2>
+          <p>Model deprecations. Rate limit changes. API rewrites. Provider outages. Most AI implementations are one breaking change away from failure.</p>
+          <p><strong style="color: var(--cream);">OpenClaw™ builds systems that survive these disruptions.</strong> Your applications keep working when dependencies change, degrade gracefully under failure, and adapt without rewrites.</p>
+          <p style="margin-top: 24px; color: var(--gold); font-weight: 600;">Professional async delivery. No meetings. Built for teams that ship, not talk.</p>
         </div>
 
         <!-- Features View -->
         <div class="content-view" data-content="features">
           <span class="eyebrow">Powered by OpenClaw™</span>
-          <h2>What We Deliver</h2>
+          <h2>How It Works</h2>
           <div class="feature-list">
             <div class="feature-item">
-              <h3>🛡️ Resilience Engineering</h3>
-              <p>Purpose-built systems that anticipate failure modes before they happen. Graceful degradation, not catastrophic collapse.</p>
+              <h3>🛡️ Resilience by Design</h3>
+              <p>We anticipate failure modes before they happen. Automatic fallbacks, graceful degradation, and retry logic built in. Your users see slower responses, not error screens.</p>
             </div>
             <div class="feature-item">
-              <h3>⚙️ Zero-Meeting Delivery</h3>
-              <p>Professional asynchronous execution. Strategic diagnostics, blueprints, and deployment on your timeline.</p>
+              <h3>⚙️ Async Delivery</h3>
+              <p>Send requirements. Get implementation. No standup meetings, no status calls, no Slack check-ins. Just working code on your timeline.</p>
             </div>
             <div class="feature-item">
-              <h3>📊 Built for Leaders</h3>
-              <p>Stability metrics that matter. Clear insights into what's fragile, what's fortified, what's next.</p>
+              <h3>📊 Clear Metrics</h3>
+              <p>Simple dashboards showing what's working, what's degraded, and where your risk is. No jargon. No bullshit.</p>
             </div>
           </div>
         </div>
@@ -518,27 +518,27 @@
         <!-- Resilience View -->
         <div class="content-view" data-content="resilience">
           <span class="eyebrow">Powered by OpenClaw™</span>
-          <h2>The OpenClaw™ Difference</h2>
+          <h2>Why OpenClaw™ Works</h2>
           <div class="value-list">
             <div class="value-item">
               <div class="value-number">01</div>
               <div class="value-content">
-                <h4>Model Agnostic</h4>
-                <p>Survive vendor lock-in, deprecations, and provider shifts. Build once, adapt infinitely.</p>
+                <h4>Provider Agnostic</h4>
+                <p>Switch between OpenAI, Anthropic, or open source models without changing your code. When GPT-4 gets deprecated, you flip a config flag.</p>
               </div>
             </div>
             <div class="value-item">
               <div class="value-number">02</div>
               <div class="value-content">
-                <h4>Failure Tolerant</h4>
-                <p>Graceful degradation ensures partial functionality instead of total outage.</p>
+                <h4>Failure Handling</h4>
+                <p>Rate limits? Try a different provider. Model down? Fall back to cached results. Network timeout? Queue and retry. Failures become slowdowns, not outages.</p>
               </div>
             </div>
             <div class="value-item">
               <div class="value-number">03</div>
               <div class="value-content">
-                <h4>Evolution Ready</h4>
-                <p>Architecture designed for change. New capabilities extend what exists, not rewrite it.</p>
+                <h4>Built to Evolve</h4>
+                <p>Add new models, change providers, update logic—all without architectural rewrites. Extend what exists instead of rebuilding from scratch.</p>
               </div>
             </div>
           </div>
@@ -548,8 +548,8 @@
         <div class="content-view" data-content="access">
           <span class="eyebrow">Powered by OpenClaw™</span>
           <div class="email-form-container">
-            <h3>Secure Early Access</h3>
-            <p class="form-note">Join the founding partner program. Limited availability for stability-first organizations.</p>
+            <h3>Early Access Program</h3>
+            <p class="form-note">Limited founding partner slots. We assess your current architecture, identify fragility, and implement OpenClaw™ resilience patterns. Async delivery, fixed scope, clear timeline.</p>
             <form class="email-capture" action="#" method="post">
               <input 
                 type="email" 
@@ -558,9 +558,9 @@
                 required 
                 aria-label="Email address"
               />
-              <button type="submit" class="submit-btn">Get Priority Access</button>
+              <button type="submit" class="submit-btn">Request Assessment</button>
             </form>
-            <p class="trust-note">Exclusive OpenClaw™ diagnostics · Custom resilience blueprints · No meetings required</p>
+            <p class="trust-note">Architecture review · Implementation blueprint · 4-week delivery · No meetings required</p>
           </div>
         </div>
       </div>
